--- a/course.html
+++ b/course.html
@@ -182,11 +182,11 @@
 
 </div>
 
-<footer>
+<footer class="course_footer">
 
     <p class="offer">This offer ends in <strong> 3d &#x2022; 10:10:19</strong></p>
 
-    <div>
+    <div cl>
         <div class="text">
             <h4>17.99$</h4>
             <h4> 72% Disc.</h4>
