--- a/recommended.html
+++ b/recommended.html
@@ -126,5 +126,6 @@
 
 </div>
 <script type="module" src="/js/main.js"></script>
+<script type="module" src="/sections/recommended/index.js"></script>
 </body>
 </html>
