--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Quicksand&display=swap"
-          rel="stylesheet">
+    rel="stylesheet">
+
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+
+
+    <link rel="stylesheet" href="./css/homepage/homepage.css">
+    <link rel="stylesheet" href="./css/global/global.css">
 
 
     <title>Vite App</title>
@@ -76,8 +85,8 @@
             <div class="swiper-wrapper">
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <a href="/course.html" class="swiper_item hero_swiper_item">
-                        <img src="./img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
+                    <a href="./pages/course.html" class="swiper_item hero_swiper_item">
+                        <img src="./public/img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
@@ -87,8 +96,8 @@
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <a href="/course.html" class="hero_swiper_item">
-                        <img src="./img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
+                    <a href="./pages/course.html" class="hero_swiper_item">
+                        <img src="./public/img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
@@ -98,8 +107,8 @@
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <a href="/course.html" class="hero_swiper_item">
-                        <img src="./img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
+                    <a href="./pages/course.html" class="hero_swiper_item">
+                        <img src="./public/img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
@@ -109,8 +118,8 @@
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <a href="/course.html" class="hero_swiper_item">
-                        <img src="./img/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
+                    <a href="./pages/course.html" class="hero_swiper_item">
+                        <img src="./public/img/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
@@ -120,8 +129,8 @@
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <a href="/course.html" class="hero_swiper_item">
-                        <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="">
+                    <a href="./pages/course.html" class="hero_swiper_item">
+                        <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
@@ -131,8 +140,8 @@
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <a href="/course.html" class="hero_swiper_item">
-                        <img src="./img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
+                    <a href="./pages/course.html" class="hero_swiper_item">
+                        <img src="./public/img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
@@ -159,11 +168,11 @@
             <div class="swipers others_swiper">
                 <div class="swiper-wrappers others_swiper_wrapper">
                     <div class="swiper-slides others_swiper_slide">
-                        <a href="/course.html">
+                        <a href="./pages/course.html">
                             <div class="card">
 
                                 <div class="thumbnail">
-                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                     <p class="time">3h 4min</p>
                                 </div>
 
@@ -186,11 +195,11 @@
                     </div>
                     <div class="swiper-slides others_swiper_slide">
 
-                        <a href="/course.html">
+                        <a href="./pages/course.html">
                             <div class="card">
 
                                 <div class="thumbnail">
-                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <img src="././public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                     <p class="time">3h 4min</p>
                                 </div>
 
@@ -212,11 +221,11 @@
                         </a>
                     </div>
                     <div class="swiper-slides others_swiper_slide">
-                        <a href="/course.html">
+                        <a href="./pages/course.html">
                             <div class="card">
 
                                 <div class="thumbnail">
-                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                     <p class="time">3h 4min</p>
                                 </div>
 
@@ -238,11 +247,11 @@
                         </a>
                     </div>
                     <div class="swiper-slides others_swiper_slide">
-                        <a href="/course.html">
+                        <a href="./pages/course.html">
                             <div class="card">
 
                                 <div class="thumbnail">
-                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                     <p class="time">3h 4min</p>
                                 </div>
 
@@ -264,11 +273,11 @@
                         </a>
                     </div>
                     <div class="swiper-slides others_swiper_slide">
-                        <a href="/course.html">
+                        <a href="./pages/course.html">
                             <div class="card">
 
                                 <div class="thumbnail">
-                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                     <p class="time">3h 4min</p>
                                 </div>
 
@@ -303,28 +312,28 @@
         <div class="categories_slider_container">
             <div class="categories_slider">
                 <div class="categories_card">
-                    <img src="./img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
+                    <img src="./public/img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
                     <div class="text">
                         <p>Writing</p>
                     </div>
                 </div>
 
                 <div class="categories_card">
-                    <img src="./img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
+                    <img src="./public/img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
                     <div class="text">
                         <p>Writing</p>
                     </div>
                 </div>
 
                 <div class="categories_card">
-                    <img src="./img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
+                    <img src="./public/img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
                     <div class="text">
                         <p>Writing</p>
                     </div>
                 </div>
 
                 <div class="categories_card">
-                    <img src="./img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
+                    <img src="./public/img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
                     <div class="text">
                         <p>Writing</p>
                     </div>
@@ -339,7 +348,7 @@
 
         <header>
             <h1>Recommended</h1>
-            <button><a href="/recommended.html">
+            <button><a href="./pages/recommended.html">
                 Show More
             </a></button>
         </header>
@@ -352,7 +361,7 @@
                         <div class="card">
 
                             <div class="thumbnail">
-                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                 <p class="time">3h 4min</p>
                             </div>
 
@@ -376,7 +385,7 @@
                         <div class="card">
 
                             <div class="thumbnail">
-                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                 <p class="time">3h 4min</p>
                             </div>
 
@@ -400,7 +409,7 @@
                         <div class="card">
 
                             <div class="thumbnail">
-                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                 <p class="time">3h 4min</p>
                             </div>
 
@@ -424,7 +433,7 @@
                         <div class="card">
 
                             <div class="thumbnail">
-                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <img src="./public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                 <p class="time">3h 4min</p>
                             </div>
 
@@ -448,7 +457,7 @@
                         <div class="card">
 
                             <div class="thumbnail">
-                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <img src="././public/img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
                                 <p class="time">3h 4min</p>
                             </div>
 
@@ -480,22 +489,22 @@
         <div class="featured_grid">
             <div class="featured_card">
                 <a href="/">
-                    <img src="./img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
+                    <img src="./public/img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
                 </a>
             </div>
             <div class="featured_card">
                 <a href="/">
-                    <img src="./img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
+                    <img src="./public/img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
                 </a>
             </div>
             <div class="featured_card">
                 <a href="/">
-                    <img src="./img/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
+                    <img src="./public/img/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
                 </a>
             </div>
             <div class="featured_card">
                 <a href="/">
-                    <img src="./img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
+                    <img src="./public/img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -508,6 +517,52 @@
     </footer>
 
 </div>
-<script type="module" src="/js/main.js"></script>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+<script type="module" src="./js/homepage.js"></script>
+
+
+<script type="module">
+    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js'
+
+    const swiper = new Swiper(".hero-swiper", {
+        // loop: true,
+        allowTouchMove: true,
+        // modules: [Scrollbar],
+
+        scrollbar: {
+            el: ".swiper-scrollbar",
+            hide: false,
+        },
+    });
+
+
+    const nvBtn = document.querySelector('.nav_menu_btn')
+    const nvListBtn = document.querySelector('.nav_list_btn')
+
+    nvBtn.addEventListener('click', () => {
+        // document.querySelector('.nav_slider').classList.add('show')
+        gsap.to('.nav_slider', {
+            x: '-1%',
+            duration: gsap.defaults().duration,
+            onComplete(){
+                // document.querySelector('.nav_slider').classList.toggle('hide')
+            }
+        })
+    })
+
+    nvListBtn.addEventListener('click', () => {
+        gsap.to('.nav_slider', {
+            x: '-101%',
+            duration: gsap.defaults().duration,
+            onComplete(){
+                // document.querySelector('.nav_slider').classList.toggle('hide')
+
+            }
+        })
+    })
+</script>
+
 </body>
 </html>
